--- a/.github/workflows/email.yml
+++ b/.github/workflows/email.yml
@@ -42,7 +42,16 @@ jobs:
         id: changed-files
         uses: tj-actions/changed-files@v34
         with:
-          separator: ","                 
+          separator: "," 
+      # tj-actions' limiation prevents the user from using "\n" as ouptput seperator.
+      # parse the list of changed files and add <br> to add line feeds.   
+      - name: Parse changed files
+        id: parsed-output
+        run: |      
+                echo "MODIFIED= $(echo ${{steps.changed-files.outputs.modified_files}} |  sed 's/\,/<br>/g' )" >> $GITHUB_ENV
+                echo "ADDED= $(echo ${{steps.changed-files.outputs.added_files}} |  sed 's/\,/<br>/g' )" >> $GITHUB_ENV
+                echo "DELETED= $(echo ${{steps.changed-files.outputs.deleted_files}} |  sed 's/\,/<br>/g' )" >> $GITHUB_ENV
+
       - name: Send mail  
         uses: dawidd6/action-send-mail@v3
         with:
@@ -76,11 +85,11 @@ jobs:
               Compare: ${{env.COMPARE_URL}} <br> 
               Diff: ${{github.event.pull_request.diff_url}} <br>
               Modified Files: <br>
-                   ${{steps.changed-files.outputs.modified_files}} <br><br>
+                   ${{env.MODIFIED}} <br><br>
               Added Files: <br>
-                   ${{steps.changed-files.outputs.added_files}} <br><br>    
+                   ${{env.ADDED}} <br><br>    
               Removed Files: <br>     
-                   ${{steps.changed-files.outputs.deleted_files}} <br>
+                   ${{env.DELETED}} <br>
              
               </p>
               </body>
