fix(chpldoc): make chpldoc detect CHPL_HOME if not set or passed
* chpl has the ability to locate CHPL_HOME if it's not set in the
  environment nor given from the command line. Previously chpldoc
  also had this functionality as it was just a symlink to chpl.
  When we moved to dyno-chpldoc, we did not maintain this functionality,
  which wasn't detected because the installation script was not
  properly copying the new chpldoc. Once the installation script was
  corrected, this missing feature caused test failures, which forced
  us to revert PR 20880 (the installation script fix). With this fix,
  we should be able to un-revert PR 20880 and verify that the
  installation works and chpldoc detects CHPL_HOME appropriately

Signed-off-by: arezaii <ahmad.rezaii@hpe.com>

--- a/tools/chpldoc/CMakeLists.txt
+++ b/tools/chpldoc/CMakeLists.txt
@@ -16,7 +16,7 @@
 # limitations under the License.
 add_executable(chpldoc "chpldoc.cpp")
 set_property(TARGET chpldoc PROPERTY CXX_STANDARD 14)
-target_sources(chpldoc PRIVATE arg.h arg.cpp arg-helpers.h arg-helpers.cpp version_num.h)
+target_sources(chpldoc PRIVATE arg.h arg.cpp arg-helpers.h arg-helpers.cpp version_num.h configured_prefix.h)
 target_link_libraries(chpldoc libdyno)
 target_include_directories(chpldoc PUBLIC
                            ${CHPL_MAIN_INCLUDE_DIR}
